--- a/02_DGSweden/src/sdgsweden/AndraProjekt.form
+++ b/02_DGSweden/src/sdgsweden/AndraProjekt.form
@@ -27,10 +27,10 @@
               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="ButtonOkMedAlt" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="alternativ" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblBeskrivning" alignment="0" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="rbtnTaBort" min="-2" max="-2" attributes="0"/>
+                  <Component id="rbtnLaggTill" min="-2" max="-2" attributes="0"/>
+                  <Component id="rbtnAndra" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblBeskrivning" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="242" max="32767" attributes="0"/>
           </Group>
@@ -41,11 +41,15 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
               <Component id="lblBeskrivning" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="alternativ" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="rbtnLaggTill" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="rbtnTaBort" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="rbtnAndra" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="ButtonOkMedAlt" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="172" max="32767" attributes="0"/>
+              <EmptySpace pref="119" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -56,21 +60,6 @@
         <Property name="text" type="java.lang.String" value="Administration av projekt"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JComboBox" name="alternativ">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Alternativ"/>
-            <StringItem index="1" value="L&#xe4;gg till projekt"/>
-            <StringItem index="2" value="&#xc4;ndra ett projekt"/>
-            <StringItem index="3" value="Ta bort projekt"/>
-          </StringArray>
-        </Property>
-      </Properties>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-      </AuxValues>
-    </Component>
     <Component class="javax.swing.JButton" name="ButtonOkMedAlt">
       <Properties>
         <Property name="text" type="java.lang.String" value="G&#xe5; vidare"/>
@@ -78,6 +67,21 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonOkMedAltActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="rbtnLaggTill">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="L&#xe4;gg till nytt projekt"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="rbtnTaBort">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Ta bort projekt"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="rbtnAndra">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="&#xc4;ndra i projekt"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
