--- a/02_DGSweden/src/sdgsweden/TestKlassUtifrånVideos.form
+++ b/02_DGSweden/src/sdgsweden/TestKlassUtifrånVideos.form
@@ -28,12 +28,19 @@
               <Component id="lblHej" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="198" max="32767" attributes="0"/>
           </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
+              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
               <Component id="lblHej" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="160" max="32767" attributes="0"/>
           </Group>
@@ -44,6 +51,11 @@
     <Component class="javax.swing.JLabel" name="lblHej">
       <Properties>
         <Property name="text" type="java.lang.String" value="Hejsan"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButton1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
   </SubComponents>
