--- a/02_DGSweden/src/sdgsweden/HuvudFonster.form
+++ b/02_DGSweden/src/sdgsweden/HuvudFonster.form
@@ -27,7 +27,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-                      <Component id="lblFornamn" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblProjektnamn" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
@@ -38,7 +38,7 @@
                               <Component id="lblOutputNamn" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
-                              <Component id="lblId" min="-2" max="-2" attributes="0"/>
+                              <Component id="lblPid" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="txtInput" min="-2" pref="71" max="-2" attributes="0"/>
                           </Group>
@@ -56,10 +56,10 @@
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="lblOutputNamn" min="-2" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <Component id="lblFornamn" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblProjektnamn" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="lblId" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblPid" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtInput" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -72,20 +72,23 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="lblFornamn">
+    <Component class="javax.swing.JLabel" name="lblProjektnamn">
       <Properties>
-        <Property name="text" type="java.lang.String" value="f&#xf6;rnamn"/>
+        <Property name="text" type="java.lang.String" value="Projektnamn"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="lblId">
+    <Component class="javax.swing.JLabel" name="lblPid">
       <Properties>
-        <Property name="text" type="java.lang.String" value="id:"/>
+        <Property name="text" type="java.lang.String" value="pid"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnHamta">
       <Properties>
         <Property name="text" type="java.lang.String" value="h&#xe4;mta"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHamtaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtInput">
     </Component>
